--- a/_units/05.md
+++ b/_units/05.md
@@ -59,10 +59,8 @@ Replace F1 and F0 by integer numbers and get the result by entering the formula 
 
 The unit for I is cents — one cent being a 1/100th of a semitone.
 
-{% include note author="vg" text="'Frequenzverhältnis' should be in English righ?" %}
-
 {% include begin-table description="Some data" %}
-| Interval (Name) | Frequency ratio (?) {% comment %} Frequenzverhältnis {% endcomment %}| Interval (Size in Cents) | Size of Tempered Interval
+| Interval (Name) | Frequency ratio | Interval (Size in Cents) | Size of Tempered Interval
 | unison | 1/1 | 0 | 0 |
 | minor second | 	16/15 | 112 | 100 |
 | major second | 9/8  | 204 | 200 |
@@ -77,17 +75,6 @@ The unit for I is cents — one cent being a 1/100th of a semitone.
 | major seventh | 15/8 | 1088 | 1100 |
 | octave | 2/1 | 1200 | 1200 |
 {% include end-table %}
-
-# The Fifth as the Generator of Tonality
-
-The fifth (3:2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by the listeners. It has a similarity with the octave, which is perceived as an identical sound.
-
-The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and thus indicates of the holistic, self-similar or fractal nature of (tonal) music.
-
-1. Harmonic Series
-1. Intervals of Complex tones
-1. Function: T-D
-1. Key Areas: C major - G major
 
 # Residual or Virtual Pitch
 
@@ -152,7 +139,7 @@ The autocorrelogram (A) for a 200-Hz-fundamental harmonic complex computed by ta
 
 {% include note author="gh" text="I'd like go over the cases when the brain fails to calculate correct pitch: Terhardt: 11:12:13; Low-pitched triangle wave" %}
 
-# Phase locking
+## Phase locking
 
 # Cognitive Models of Pitch
 
@@ -168,6 +155,17 @@ The so—called Tritonus paradox can be demonstrated with Shepard tones. A trito
 
 Evidence that pitch chroma and pitch height activate different parts of the brain come from Warren et al (2003) {% include note author="vg" text="‘Warren et al‘ should be a quote to our references right?" %} who showed that changes in both chroma and height activate the auditory cortex, but changes in pitch chroma activate regions anterior to the regions activated by pitch height changes. 
 
+# The Fifth as the Generator of Tonality
+
+The fifth (3:2) occupies an outstanding position in almost all musical cultures. In contrast to so-called imperfect consonances such as thirds and sixths, deviations of the fifth are not well tolerated by listeners. It has a similarity with the octave, which is perceived as an identical sound.
+
+The special significance of the fifth manifests itself in the fact that it appears on four different levels of music and thus indicates of the holistic, self-similar or fractal nature of (tonal) music.
+
+1. Harmonic Series
+1. Intervals of Complex tones
+1. Function: T-D
+1. Key Areas: C major - G major
+
 # Tonality and Probe Tone Method
 
 Roger Shepard and his student Carol Krumhansl developed the Probe Tone method, aimed to explain the notion of tonality. Tonality is a hierarchical phenomenon in which the tones arranged in a system have varying amount of tension with each other. This raises the not yet fully answered question, whether the types of sound used in music (for example, with harmonic partials) ultimately determine how the music manifests itself.
@@ -182,7 +180,7 @@ By analyzing the data, three groups emerged which, depending on their musical ba
 
 Another view of pitch and tonal material looks at harmony and key changes in addition to single pitches. Krumhansl, Kessler & Bharucha (1983) found that dissimilarity judgments of pairs of chords map best onto a torus. The toroidal representation allows different tonal relations to map along the different planes of the torus, such that the C major key, for instance, is closely related to G major (circle of fifths), a minor (relative minor), and c minor (parallel minor).
 
-The arrangement of the 24 keys on the surface of a torus can now be derived from the experimentally obtained data by [Multidimensional Scaling](https://en.wikipedia.org/wiki/Multidimensional_scaling). Multidimensional scaling is a process capable of constructing a two-dimensional map from a list of distances (such as the route Cologne-Hamburg or Stuttgart-Berlin). Taking now the tonality profiles as the starting point for all 24 major and minor keys, the comparison of the profiles yields a map depicting the distances (i.e., degree of relationship) of the keys as points on the surface of a torus (“donut"). It is noticeable that the two fifths (major = red, minor = blue) spiral around the torus.
+The arrangement of the 24 keys on the surface of a torus can now be derived from the experimentally obtained data by [Multidimensional Scaling](https://en.wikipedia.org/wiki/Multidimensional_scaling). Multidimensional scaling is a process capable of constructing a two-dimensional map from a list of distances (such as the route New York - Tokyo or Melbourne - Berlin). Taking now the tonality profiles as the starting point for all 24 major and minor keys, the comparison of the profiles yields a map depicting the distances (i.e., degree of relationship) of the keys as points on the surface of a torus (“donut"). It is noticeable that the two fifths (major = red, minor = blue) spiral around the torus.
 
 {% include img-figure url="/MUTOR/assets/images/torus_keys.png" description="Representation of Key Areas on the Surface of a Torus" %}
 
