--- a/_units/07.md
+++ b/_units/07.md
@@ -106,7 +106,7 @@ Two kinds of time maps we introduce here are the rhythmogram and the maps of per
 
 In addition to the rhythmogram and the score vs performance time map, various other rhythmic representations deserve mention. Desain and Honing describe a triangular space that represents all possible expressive deviations given a four-note rhythm.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.png" description="DesainHoning" %} 
+{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.png" description="Desain & Honing" %} 
 (image source: Desain & Honing, 2003. Perception.)
 
 Other statistical methods to analyze rhythm and expressive microtiming are also widely used. Benadon uses histograms, which are graphs plotting the occurrence frequencies of events, to diagram the beat-upbeat ratios (BURs) of the swing rhythm in jazz.
@@ -293,26 +293,26 @@ Now we multiply each stratum by the product of the pulse counts of the preceding
 Rotating the final number back to the beginning yields:<br/>
 `29 0 18 6 12 24 2 20 8 14 26 4 22 10 16 28 1 19 7 13 25 3 21 9 15 27 5 25 11 17` <br/>
 <br/>
-This process is formalized by the following formula of Clarence Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
+This process is formalized by the following formula of Clarence Barlow (the rotation is applied by the addition of the 1 within the round as well as the square brackets):
 
-{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p~1~ x p~2~ x p~3~ x...x p~z~" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x p<sub>3</sub> x...x p<sub>z</sub>" %}
 <br/>
 whereby <br/>
-p<sub>0</sub> = p~z+1~ = 1<br/>
+p<sub>0</sub> = p<sub>z+1</sub> = 1<br/>
 n = position in the bar of the pulse in question, starting at 1<br/>
-p~j~ = stratification divisor on level j<br/>
+p<sub>j</sub> = stratification divisor on level j<br/>
 z = number of levels in the stratification <br/>
-Ψ~p~(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
-\[x\] = whole-number component of x (floor)<br/>
+Ψ<sub>p</sub>(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
+\[x\] = whole-number component (floor) of x <br/>
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br/>
-For r=0: (2 * 3) * Ψ5(1 + [1 + (22 mod 30 / 1)] mod 5) = 6 * Ψ5(1 + 23 mod 5) = 6 * Ψ5(1 + 3) = 6 * 1 = 6 <br/>
-For r=1: 2 * Ψ3(1 + [1 + (22 mod 30 / 5)] mod 3) = 2 * Ψ3(1 + 5.4 mod 3) = 2 * Ψ3(1 + 2) = 2 * 1 = 2 <br/>
-For r=2: 1 * Ψ2(1 + [1 + (22 mod 30 / 15)] mod 2) = 1 * Ψ2(1 + 2.47 mod 2) = 1 * Ψ2(1 + 0) = 1 * 1 = 1 <br/>
+For r=0: (2 * 3) * Ψ<sub>5</sub>(1 + [1 + (22 mod 30 / 1)] mod 5) = 6 * Ψ<sub>5</sub>(1 + 23 mod 5) = 6 * Ψ<sub>5</sub>(1 + 3) = 6 * 1 = 6 <br/>
+For r=1: 2 * Ψ<sub>3</sub>(1 + [1 +</sub> (22 mod 30 / 5)] mod 3) = 2 * Ψ<sub>3</sub>(1 + 5.4 mod 3) = 2 * Ψ<sub>3</sub>(1 + 2) = 2 * 1 = 2 <br/>
+For r=2: 1 * Ψ<sub>2</sub>(1 + [1 + (22 mod 30 / 15)] mod 2) = 1 * Ψ<sub>2</sub>(1 + 2.47 mod 2) = 1 * Ψ<sub>2</sub>(1 + 0) = 1 * 1 = 1 <br/>
 <br/>
 The sum of the three members is therefore 9 (see above).<br/>
 
-Barlow has often used such profiles in his compositions based on a generative probabilitic approach (i.e. weighted chance), his 30-minutes piano piece Çoǧluotobüsişletmesi among them.
+Barlow has often used such profiles in his compositions based on a generative probabilitic approach (i.e. weighted chance operations), his 30-minutes piano piece [Çoǧluotobüsişletmesi](https://youtu.be/-y8bcdSXwY8) among them.
 
 # Summary
 We have provided an overview of the physic and biology of rhythm perception and production. Our perception of rhythm depends on sounds; in particular on perceptual accents or event onsets within the streams of sounds to which we are exposed in the environment. Rhythm seems to function optimally at the range of the Tactus, and can be subdivided into the smallest unit known as the Tatum. Microtiming and expressive timing can be described using time maps, which include the rhythmogram and graphs relating score time to performance time. Models of rhythm and meter can be divided into two broad classes known as the interval timing models and the coupled oscillator models. In some cases, rhythm production can also be modeled as covariance. The Bayesian method provides a method to relate rhythm perception with production.
@@ -347,5 +347,7 @@ Doug Eck's java simulator of oscillators - provides explanations of coupled osci
 Java applet demo of coupled oscillators: http://www.lon-capa.org/~mmp/applist/coupled/osc2.htm 
 
 Peter Desain's Music, Mind, and Machine Group offers several downloadable demos on expressive timing and the Bayesian model of rhythm. http://www.nici.kun.nl/mmm/
+
+Barlow's book On Musiquantics: http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf 
  
 {% include unit_postamble.md %}
