--- a/_units/07.md
+++ b/_units/07.md
@@ -227,16 +227,17 @@ Applied to rhythm, the coupled oscillator model states that rhythm is the result
 
 # A Mathematical Model of Meter: Clarence Barlow's Indispensability Function
 
-In Western music, the inherent quality of a meter can be, within limits, encoded by the time signature and the beams employed in its notation. While measures in 3/4, 6/8 and 12/16 meters contain the same number of 16th notes, musicians have learned accentuate the pulses in order to give the meter a clear contour. A meter can be considered a kind of _relief_ upon which the gestalt of a rhythm is based. While a meter conditions a rhythm, it can also go against the grain of the former by forming _syncopations_. A rhythm in conjunction with a series of pitches forms the gestalt of a melody.
-The composer and music theorist Barlow developed in the 1970s a quantitative model which is capable of yielding a _metric profile_ for a given meter which assigns a unique weight value (indispensability) to each of its pulses. The term indispensability stems from _thinning_ experiments in which Barlow asked subjects to determine which pulses are necessary to maintain a sense of a meter when successively turning its pulses into rests and therefore are less **dispensible**. A metric profile thus represents a kind of "natural order" akin to a harmonic series, but just with the tones derived from the harmonic series, composers and improvising musicians are free decide when and how to violate this order, thus playing with the sense of tension and relief.
+In Western music, the inherent quality of a meter can be, within limits, encoded by the time signature and the beams employed in its notation. While measures in 3/4, 6/8 and 12/16 meters contain the same number of 16th notes, musicians have learned accentuate the pulses in order to give them a distinct character. A meter can be considered a kind of _relief_ upon which the gestalt of a rhythm is derived. A rhythm in conjunction with a series of pitches forms the gestalt of a melody (see Unit 8). While a meter conditions a rhythm, _syncopated_ rhythms can go against the grain of the underlying meter.
 
-A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes subdividing the dotted quarter notes) at the next lower level.
+The composer and music theorist Barlow developed in the 1970s a quantitative model capable of yielding a _metric profile_ for any given meter. Such a profile assigns a unique weight value (indispensability) to each of its pulses. The term indispensability stems from _thinning_ experiments in which Barlow asked subjects to determine which pulses are necessary to maintain a clear sense of a meter when successively turning its pulses into rests and therefore are less **dispensible**. A metric profile thus represents a kind of "natural order" akin to a harmonic series. But just with the tones derived from the harmonic series, composers and improvising musicians are free decide when and how to violate this order, using this as a means to play with tension and relief on a termporal level.
 
-Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
+A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes subdividing each of the dotted quarter notes) at the next lower level.
+
+Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2. 
 
 The following meters have the same number of pulses, but a different stratification yielding the following profiles:<br/>
 `3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/>
-`6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5` <br/>
+`6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5`<br/>
 `12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7`<br/>
 
 <br/>
@@ -250,7 +251,7 @@ The values for the first and second levels are also contained herein: to make th
 
 Note that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
 
-The metric profile of a compound meter is obtained by adding the indispensability values of the basic meter of each strata, rotating the first value backwards in each case. In the following examples the dashes are replaced by the repeating the preceding number.
+The metric profile of a compound meter is obtained by adding the indispensability values of the basic profiles of each strata, rotating the first value backwards in each case.
 
 12/16 meter:<br/>
 `Pulse #     2  3  4  5  6  7  8  9  10 11 12 1`<br/>
@@ -267,7 +268,7 @@ The metric profile of a compound meter is obtained by adding the indispensabilit
 Rotating the first pulse back to the beginning yields:<br/>
 `11  0  4  8  2  6  10  1  5  9  3  7`<br/>
 
-Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further divided by 5 sixteenth note quintuplet), we initially get:<br/>
+Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further divided by 5 sixteenth-note quintuplet), we initially get:<br/>
 `Pulse #:`<br/>
 `2  3  4  5  6  7  8  9  10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 1` <br/>
 `1st stratum:` <br/>
@@ -293,7 +294,7 @@ Now we multiply each stratum by the product of the pulse counts of the preceding
 Rotating the final number back to the beginning yields:<br/>
 `29 0 18 6 12 24 2 20 8 14 26 4 22 10 16 28 1 19 7 13 25 3 21 9 15 27 5 25 11 17` <br/>
 <br/>
-This process is formalized by the following formula of Clarence Barlow (the rotation is applied by the addition of the 1 within the round as well as the square brackets):
+This process is formalized by the following formula of Clarence Barlow (the rotation is applied by the addition of the 1 within the round and square brackets):
 
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>" %}
 <br/>
@@ -307,10 +308,11 @@ z = number of levels in the stratification <br/>
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br/>
 For r=0: (2 * 3) * Ψ<sub>5</sub>(1 + [1 + (22 mod 30 / 1)] mod 5) = 6 * Ψ<sub>5</sub>(1 + 23 mod 5) = 6 * Ψ<sub>5</sub>(1 + 3) = 6 * 1 = 6 <br/>
-For r=1: 2 * Ψ<sub>3</sub>(1 + [1 +</sub> (22 mod 30 / 5)] mod 3) = 2 * Ψ<sub>3</sub>(1 + 5.4 mod 3) = 2 * Ψ<sub>3</sub>(1 + 2) = 2 * 1 = 2 <br/>
+For r=1: 2 * Ψ<sub>3</sub>(1 + [1 + (22 mod 30 / 5)] mod 3) = 2 * Ψ<sub>3</sub>(1 + 5.4 mod 3) = 2 * Ψ<sub>3</sub>(1 + 2) = 2 * 1 = 2 <br/>
 For r=2: 1 * Ψ<sub>2</sub>(1 + [1 + (22 mod 30 / 15)] mod 2) = 1 * Ψ<sub>2</sub>(1 + 2.47 mod 2) = 1 * Ψ<sub>2</sub>(1 + 0) = 1 * 1 = 1 <br/>
 <br/>
-The sum of the three members is therefore 9 (see above).<br/>
+The sum of the three value is therefore 9 (see above).<br/>
+This formula can be extended to also work with additive meters such 2+3+3+2+3.
 
 Barlow has often used such profiles in his compositions based on a generative probabilitic approach (i.e. weighted chance operations), his 30-minutes piano piece [Çoǧluotobüsişletmesi](https://youtu.be/-y8bcdSXwY8) among them.
 
