--- a/_units/08.md
+++ b/_units/08.md
@@ -5,12 +5,12 @@
 ###
 title: Gestalt and Melody
 number: 8
-short_description: short description of the unit
+short_description: Unit on Gestalt and Melody 
 summary: In this unit we have looked at several perceptual principles which give rise to our experience of melody and melodic processes. The melodic processes we discussed include interval sizes and melodic contour. The Implication-Realization Model, the gap fill principle, and the Gestalt processes of visual perception are all good predictors of the way melodies tend to unfold. Statistical models also play an important role in our understanding and production of melody. Melodies can be modeled as a Hidden Markov Model, or a chain of conditional probabilities. With a matrix that dictates transitions between melodic intervals, we can generate many interesting melodies with predetermined characteristics. Texture arises from the confluence of multiple melodies. The axes of texture space can be defined as onset synchrony and semblant motion, and the resulting figure enables the differentiation between musical styles.
 authors: 
  - Georg Hajdu
  - Psyche Loui
-topics: [topic 1, topic 2]
+topics: [Gestalt Psychology, Gestalt Principles of Melody, Texture Space]
 test_questions:
 - What are the Gestalt processes of visual perception? How do they relate to melody?
 - What are the relative advantages of generating melodies as a matrix of conditional probabilities?
@@ -32,11 +32,9 @@ mathjax: true
 
 In this unit we will discuss melody from a Gestalt perspective. Gestalt psychology is a direction within psychology that describes human perception as the ability to identify structures and principles of order in sensory information. In his 1890 article _Über Gestaltqualitäten_ (engl. _On Gestalt Qualities_), Austrian philosopher Christian von Ehrenfels made the claim that perception contains qualities that do not result from the arrangement of simple sensory qualities. Ehrenfels' research was the point of departure for Wertheimer, Koffka and Köhler who outlined Gestalt theory during the early 1910s while working at the Frankfurt university. 
 According to  Ehrenfels, a melody could serve as an example for such a Gestalt quality, since the tones as elements of the melody can be replaced by completely different tones, and it would still be heard as the same melody provided that the arrangement relationship between the tones is preserved.  A melody is defined as a series of pitches presented in succession. (This is in contrast to simultaneously presented pitches, which defines harmony as discussed in the next unit.) From a perceptual perspective, much of the importance of melody lies in the relationships between successive pitches in a melody, i.e. interval sizes and directions. Models of interval sizes, such as Implication Realization Model, Gap Fill, and Gestalt theories, are closely related to expectation. At a larger scale, the overall pattern of the melody, as dictated by the melodic contour, plays a crucial role in melodic perception. Knowledge in the statistical processes that generate melodies, such as Hidden Markov Models, can be useful in composition, especially given its potential in the automatic composition of large sets of melodies. 
-The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies. 
+The combination of melodies gives rise to musical texture, and the creation of musical texture requires attention not only to each melody in itself, but to the interactions between melodies, commonly also referred to as voice leading and counterpoint.
 
-The rules of voice leading can be derived from a perceptual Texture Space, which can represent groups of melodies and generate predictions for distinct musical styles.
-
-{% include note author="gh" text="Isn't this a bit overstated?" %}
+The rules of voice leading can be related to a perceptual Texture Space, which in turn is capable of representing groups of melodies and their temporal and Gestalt relationships.
 
 # Unconscious Inference
 
@@ -44,19 +42,19 @@ Gestalt psychology is  deeply rooted in the work of Hermann von Helmholtz (1821-
 
 Such clues include:
 
-• Linear perspective: e.g. converging lines indicate parallelism and depth in 3 dimensions
-• Size gradient: elements of a similar pattern become smaller towards the horizon
-• Aerial perspective: distant objects appear bright and blue
-• Binocular disparity: each of the two eyes gets a slightly different image, from which the brain can draw conclusions about the relative distance of the contained objects
-• Motion Parallax: moving the observer shifts the image on the retina. This makes it possible to draw conclusions about distances.
+* Linear perspective: e.g. converging lines indicate parallelism and depth in 3 dimensions
+* Size gradient: elements of a similar pattern become smaller towards the horizon
+* Aerial perspective: distant objects appear bright and blue
+* Binocular disparity: each of the two eyes gets a slightly different image, from which the brain can draw conclusions about the relative distance of the contained objects
+* Motion Parallax: moving the observer shifts the image on the retina. This makes it possible to draw conclusions about distances.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_Table_Surfaces.png" description="The two parallograms representing the table surfaces are rotationally symmetric" %}
 
-The figure 8.1 shows that the internal representation of an object can differ greatly from the physical stimulus on the retina. In fact, both table surfaces (parallelograms) are identical (http://www.michaelbach.de/ot/sze_shepardTables/index.html). However, the fact that the lines are interpreted as part of a three-dimensional object creates the impression that the tables are different.
+The figure 8.1 shows that the internal representation of an object can differ greatly from the physical stimulus on the retina. In fact, both table surfaces (parallelograms) are identical. However, the fact that the lines are interpreted as part of a three-dimensional object creates the impression that the tables are different. [An animation of the rotating table top can be seen here] (http://www.michaelbach.de/ot/sze_shepardTables/index.html).
 
 # Invariance: Constancy of Size and Loudness
 The size of an object on the retina changes with the distance to the observer. Nevertheless, we have developed the ability to perceive the size of an object independently of its distance. We call this phenomenon constancy of size. When listening, we find the phenomenon of volume constancy as an analogy to size constancy.
-Example in the sound domain: The difference between quieter and farther away. The energy that an instrument emits is ideally evenly distributed over a spherical surface. As a result, the intensity reaching the listener decreases with the square of the distance. Visual Analogy: Balloon that either flies away or loses size. So we need other clues to decide about the nature of the process:
+Example in the sound domain: The difference between quieter and farther away. The energy that an instrument emits is ideally evenly distributed over a spherical surface. As a result, the intensity reaching the listener decreases with the square of the distance. One can create a visual analogy: A balloon that either flies away or loses size. So we need other clues to decide about the nature of the process:
 1. When an instrument plays quietly, the tone changes noticeably
 1. Normally a sound is reflected by other objects in the room. This creates reverb, which gives information about the size of the room. When a sound is close, we hear more direct sound and little reverb that hits with a time delay. As the sound fades away, its intensity decreases and reverb increases.
 
@@ -66,6 +64,9 @@ Example in the sound domain: The difference between quieter and farther away. Th
 The perception of objects can be confusing if the spatial or temporal order is reversed, as in the case of the double faces in this image, which we interpret in a specific, fixed way (this definition takes place in early childhood). 
 
 {% include img-figure url="/MUTOR/assets/images/unit8_Spacial_Inversion.png" description="The perception of objects can be confusing if the spatial or temporal order is reversed" %}
+
+The Thatcher illusion is based on the same principle:
+{% include img-figure url="/MUTOR/assets/images/unit8_Thatcher-Illusion.png" description="In an face drawn upside-down it is perceptually difficult to tell if  eyes and mouth are right-side up" %}
 
 An example in the auditory domain would be the reversed sound of a cymbal, a familiar sonority in popular music, which has a distict quality while still betraying its origin.
 
@@ -96,7 +97,7 @@ A similar phenomenon is the _subjective contour_. It is difficult not to see tha
 {% include img-figure url="/MUTOR/assets/images/unit8_Kinazsa_Triangle.png" description="" %}
 
 # Figure-Ground Organization
-Figure-ground organization is a Gestalt principle depicts our ability to make out a figure in front of a background. We tend to perceive as figures those parts of our perceptual fields that are convex, symmetric, small, and enclosed. The [figure–ground vase illusion](https://en.wikipedia.org/wiki/Rubin_vase) arises when the visual information given is ambiguous. In the figure below, a low quality, black and white photo of a dalmatian dog. The viewer first has to use perceptual completion to recognize the outlines of the dog against the background which could be interpreted as an overexposed scene in a park. Once, the viewer has successfully analysed the scene, he or she will identify the dog much more quickly when shown the image again. Bregman has coined the term _auditory scene analysis_ to denote processes in the auditory domain analogous to figure-ground organization and perceptual grouping.
+Figure-ground organization is a Gestalt principle depicts our ability to make out a figure in front of a background. We tend to perceive as figures those parts of our perceptual fields that are convex, symmetric, small, and enclosed. The [figure–ground vase illusion](https://en.wikipedia.org/wiki/Rubin_vase) arises when the visual information given is ambiguous. In the figure below, a low quality, black and white photo of a dalmatian dog. The viewer first has to use perceptual completion to recognize the outlines of the dog against the background which could be interpreted as an overexposed scene in a park. Once the viewer has successfully analysed the scene, he or she will identify the dog much more quickly when shown the image again. Bregman has coined the term _auditory scene analysis_ to denote processes in the auditory domain analogous to figure-ground organization and perceptual grouping.
 
 {% include img-figure url="/MUTOR/assets/images/unit8_Dalmatian.png" description="" %}
 
